# Noema

./: .gitignore  Cargo.toml  README.md
.github/workflow/: rust.yml
scripts/: package.sh
src/: cli.rs  editor.rs  error.rs  main.rs  path.rs
src/commands/: create.rs  delete.rs  info.rs  init.rs  list.rs  mod.rs  read.rs  search.rs  update.rs
src/database/: migration.rs  mod.rs  sqlite.rs
tests/: sqlite_store.rs
