[package]
name = "noema"
authors = [ "Riley" ]
version = "0.0.6-alpha"
edition = "2024"
license = "CC0-1"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = [ "derive" ] }
rusqlite = "0.39.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
uuid = { version = "1", features = [ "v4" ] }
